# OpenTTD-Rewrite

./: CMakeLists.txt  README.md
cmake/: ConfigCompiler.cmake  Linux.cmake  Windows.cmake
libs/binary/: libos.lib
libs/include/libos/: DataType.h  Defines.h  FileIO.h  NetIO.h  Window.h
src/: CMakeLists.txt  OpenTTD.hpp
src/driver/: Driver.hpp
src/driver/Video/: CMakeLists.txt  LibOSDriver.cpp  VideoDriver.cpp  VideoDriver.hpp
src/driver/video/: CMakeLists.txt  LibOSDX12Driver.cpp  LibOSDriver.hpp  LibOSVulkanDriver.cpp  VideoDriver.cpp  VideoDriver.hpp
src/ecs/: Component.hpp  Components.hpp  ECS.hpp  Entity.hpp  RenderECS.hpp  System.hpp  Systems.hpp
src/istd/: Stm.hpp
src/os/linux/: Main.cpp
src/os/windows/: Main.cpp
src/render/: DirectX12Helpers.hpp  Directx12.hpp  Renderer.hpp  Vulkan.hpp  VulkanHelpers.hpp
